<resources>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4151792091524133/8805221291</string>
    <string name="facebook_app_id" translatable="false">542389459298988</string>
    <string name="adUnitId" translatable="false">ca-app-pub-4151792091524133/1939808891</string>
    <string name="translation">English</string>
    <string name="app_name" translatable="false">Make Me Beauty</string>
    <string name="drawer_toggle_open">Open</string>
    <string name="drawer_toggle_close">Close</string>
    <string name="toolbar_title_global_feed">Make Me Beauty</string>
    <string name="toolbar_title_stylists">Stylists</string>
    <string name="toolbar_title_search">Search</string>
    <string name="toolbar_title_profile">Profile</string>
    <string name="toolbar_title_favorites">Favorites</string>
    <string name="toolbar_title_favorite_videos">Favorite videos</string>
    <string name="toolbar_title_options">Settings</string>
    <string name="toolbar_title_support">Help</string>
    <string-array name="occasions">
        <item>Any</item>
        <item>Everyday</item>
        <item>Celebrity</item>
        <item>Dramatic</item>
        <item>Holiday</item>
    </string-array>
    <string-array name="manicureShapes">
        <item>Any</item>
        <item>Square</item>
        <item>Oval</item>
        <item>Stiletto</item>
    </string-array>
    <string name="manicureDesign">Nails design</string>
    <string-array name="searchTypes">
        <item>Makeup</item>
        <item>Hairstyles</item>
        <item>Manicure</item>
    </string-array>
    <string name="menu_item_feed">Feed</string>
    <string name="menu_item_news">News</string>
    <string name="menu_item_stylists">Stylists</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_user">User</string>
    <string name="menu_item_profile">My profile</string>
    <string name="menu_item_favorites">Favorites</string>
    <string name="menu_item_favorite_videos">Favorite videos</string>
    <string name="menu_item_application">Application</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_hot">Hot</string>
    <string name="menu_item_style_types">Beauty</string>
    <string name="menu_item_makeup">Makeup</string>
    <string name="menu_item_hairstyle">Hairstyle</string>
    <string name="menu_item_manicure">Manicure</string>
    <string name="menu_item_lips">Lips</string>
    <string name="show_more_container">More</string>
    <string name="hide_more_container">Hide</string>
    <string name="title_eye_color">Eye color</string>
    <string name="title_used_colors">Used colors</string>
    <string name="title_difficult">Difficult</string>
    <string name="title_shape">Shape</string>
    <string name="title_design">Design</string>
    <string name="blue_eyes">Blue eyes</string>
    <string name="brown_eyes">Brown eyes</string>
    <string name="gray_eyes">Gray eyes</string>
    <string name="green_eyes">Green eyes</string>
    <string name="hazel_eyes">Hazel eyes</string>
    <string name="black_eyes">Black eyes</string>
    <string name="occasion_everyday">Occasion: Everyday</string>
    <string name="occasion_celebrity">Occasion: Celebrity</string>
    <string name="occasion_dramatic">Occasion: Dramatic</string>
    <string name="occasion_holiday">Occasion: Holiday</string>
    <string name="difficult_easy">Easy difficult</string>
    <string name="difficult_medium">Medium difficult</string>
    <string name="difficult_hard">Hard difficult</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="authorization_hint_name">Name</string>
    <string name="authorization_hint_last_name">Last name</string>
    <string name="authorization_hint_email">E-mail</string>
    <string name="authorization_hint_password">Password</string>
    <string name="authorization_sign_up">Sign up</string>
    <string name="authorization_sign_ip">Sign in</string>
    <string name="authorization_to_sign_up">Already registered?\nSign in here!</string>
    <string name="authorization_to_sign_in">Sign up</string>
    <string name="internet_notification">Failed to connect to the Internet\nCheck your Internet connection</string>
    <string name="try_again">Try again</string>
    <string name="header_unauthorized_hint">Click to open profile</string>
    <string name="header_authorized_hint">Click to sign in</string>
    <string name="add_hairstyle_service">Add hairstyle service</string>
    <string name="add_makeup_service">Add makeup service</string>
    <string name="add_manicure_service">Add manicure service</string>
    <string name="enter_service_name">Please enter name of service and it cost</string>
    <string name="service_name">Service name</string>
    <string name="service_cost">Service cost</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="shortHairstyle">Hair length: Short</string>
    <string name="mediumHairstyle">Hair length: Medium</string>
    <string name="longHairstyle">Hair length: Long</string>
    <string name="straightHairstyleType">Hair type: Straight</string>
    <string name="braidHairstyleType">Hair type: Braid</string>
    <string name="tailHairstyleType">Hair type: Tail</string>
    <string name="bunchHairstyleType">Hair type: Bunch</string>
    <string name="nettingHairstyleType">Hair type: Netting</string>
    <string name="curlsHairstyleType">Hair type: Curls</string>
    <string name="unstandartHairstyleType">Hair type: Custom</string>
    <string name="forKids">For kids</string>
    <string name="forEveryday">Everyday</string>
    <string name="forWedding">Wedding</string>
    <string name="forEvening">Evening</string>
    <string name="forExclusive">Exclusive</string>
    <string name="doubleClickToExit">Click again to exit</string>
    <string name="chooseAction">Choose action</string>
    <string name="call">Call</string>
    <string name="records">Records</string>
    <string-array name="hairstyleLength">
        <item>Any</item>
        <item>Short</item>
        <item>Medium</item>
        <item>Long</item>
    </string-array>
    <string-array name="hairstyleType">
        <item>Any</item>
        <item>Straight</item>
        <item>Braid</item>
        <item>Tail</item>
        <item>Bunch</item>
        <item>Netting</item>
        <item>Curls</item>
        <item>Custom</item>
    </string-array>
    <string-array name="hairstyleFor">
        <item>Any</item>
        <item>For kids</item>
        <item>Everyday</item>
        <item>Wedding</item>
        <item>Evening</item>
        <item>Exclusive</item>
    </string-array>
    <string name="whatFind">What find?</string>
    <string name="tags">Hashtags</string>
    <string name="tagsHint">color, spring, ...</string>
    <string name="chooseEyeColor">Choose eye color</string>
    <string name="checkUsedColors">Note used colors</string>
    <string name="occasion">Occasion</string>
    <string name="hairLength">Hair length</string>
    <string name="hairType">Hair type</string>
    <string name="hairFor">Applicability</string>
    <string name="manicureShape">Nails shape</string>
    <string name="makeup_easy">Easy</string>
    <string name="makeup_medium">Medium</string>
    <string name="makeup_hard">Hard</string>
    <string name="nameLastname">Name, last name</string>
    <string name="cityAddress">City, address</string>
    <string name="phoneNumber">Phone number</string>
    <string name="likes">Likes</string>
    <string name="followers">Followers</string>
    <string name="search">Search</string>
    <string name="editProfile">Edit profile</string>
    <string name="editName">Name</string>
    <string name="editLastname">Lastname</string>
    <string name="editCity">City</string>
    <string name="editAddress">Address</string>
    <string name="editPhoneNumber">Phone number</string>
    <string name="editgplus">https://plus.google.com/</string>
    <string name="editFacebook">https://facebook.com/</string>
    <string name="editVK">https://vk.com/</string>
    <string name="editInstagram">https://instagram.com/</string>
    <string name="editOK">https://ok.ru/</string>
    <string name="loading">Loading..</string>
    <string name="menu_item_search_stylist">Search stylist</string>
    <string name="searchStylistCity">City</string>
    <string name="searchStylistSkill">Service</string>
    <string name="searchStylistSkillHint">Nail extensions</string>
    <string name="notFindResult">Nothing found</string>
    <string name="cantAuth">Login or password is incorrect!\nPlease try again!</string>
    <string name="logOut">Log out</string>
    <string name="enterCity">Please, enter city</string>
    <string name="enterEmail">Please, enter e-mail</string>
    <string name="enterPassword">Please, enter password</string>
    <string name="enterName">Please, enter name</string>
    <string name="enterLastname">Please, enter last name</string>
    <string name="registering">Registering..</string>
    <string name="howToBeStylist">How to become a stylist?</string>
    <string name="howToBeStylistHint">To provide services very easy\n\n
    1. Create an account,\n
    2. Go to your profile,\n
    3. Enter contacts,\n
    4. Enter services in to price list,\n
    5. Get clients!
    </string>
    <string name="skip">Skip</string>
    <string name="goToProfile">Go to my profile</string>
    <string name="squareShape">Shape: Square</string>
    <string name="ovalShape">Shape: Oval</string>
    <string name="stilettoShape">Shape: Stiletto</string>
    <string name="french_classicDesign">Design: French classic</string>
    <string name="french_chevronDesign">Design: French chevron</string>
    <string name="french_millenniumDesign">Design: French millennium</string>
    <string name="french_funDesign">Design: French fun</string>
    <string name="french_crystalDesign">Design: French crystal</string>
    <string name="french_colorfulDesign">Design: French colorful</string>
    <string name="french_designerDesign">Design: French designer</string>
    <string name="french_spaDesign">Design: French spa</string>
    <string name="french_moonDesign">Design: French moon</string>
    <string name="artDesign">Design: Художественная роспись</string>
    <string name="designerDesign">Design: Designer</string>
    <string name="volumeDesign">Design: Volume</string>
    <string name="aquaDesign">Design: Aqua</string>
    <string name="americanDesign">Design: American</string>
    <string name="photoDesign">Design: Photo</string>
</resources>