<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/menu_item_search">
        <menu>
            <item
                android:id="@+id/navMenuSearch"
                android:icon="@mipmap/ic_magnify_dark"
                android:orderInCategory="20"
                android:title="@string/menu_item_search" />
            <item
                android:id="@+id/navMenuSearchStylist"
                android:icon="@mipmap/ic_magnify_dark"
                android:orderInCategory="30"
                android:title="@string/menu_item_search_stylist" />
        </menu>
    </item>
    <item android:title="@string/menu_item_feed">
        <menu>
            <item
                android:id="@+id/navMenuGlobalFeed"
                android:orderInCategory="1"
                android:title="@string/menu_item_news"
                android:icon="@mipmap/ic_format_list_bulleted"/>
            <!--&lt;!&ndash;<item
                android:id="@+id/navMenuHotFeed"
                android:orderInCategory="10"
                android:title="@string/menu_item_hot"
                android:icon="@mipmap/hot"/>&ndash;&gt;-->

        </menu>
    </item>
    <item android:title="@string/menu_item_style_types">
        <menu>
            <item
                android:id="@+id/navMenuMakeup"
                android:icon="@mipmap/makeup"
                android:orderInCategory="40"
                android:title="@string/menu_item_makeup" />
            <item
                android:id="@+id/navMenuHairstyle"
                android:icon="@mipmap/hairstyle"
                android:orderInCategory="50"
                android:title="@string/menu_item_hairstyle" />
            <item
                android:id="@+id/navMenuManicure"
                android:icon="@mipmap/manicure"
                android:orderInCategory="60"
                android:title="@string/menu_item_manicure" />
        </menu>
    </item>
    <item android:title="@string/menu_item_user">
        <menu>
            <item
                android:id="@+id/navMenuProfile"
                android:icon="@mipmap/ic_account_card_details"
                android:orderInCategory="70"
                android:title="@string/menu_item_profile" />
            <item
                android:id="@+id/navMenuFavorites"
                android:icon="@mipmap/ic_star"
                android:orderInCategory="80"
                android:title="@string/menu_item_favorites" />
            <item
                android:id="@+id/navMenuFavoriteVideos"
                android:icon="@mipmap/ic_filmstrip"
                android:orderInCategory="90"
                android:title="@string/menu_item_favorite_videos" />
        </menu>
    </item>
</menu>