<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <TextView
        android:id="@+id/logoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="14pt"
        android:paddingTop="64dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/signInEmailField"
            android:hint="@string/authorization_hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/signInPassField"
            android:hint="@string/authorization_hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"/>
        <Button
            android:id="@+id/signInSubmit"
            android:text="@string/authorization_sign_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/authorization_to_sign_in"
            android:id="@+id/signUp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:textSize="8pt"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</FrameLayout>