<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/profileToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"  />
        </android.support.design.widget.AppBarLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileAvatar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:border_width="0dp"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/profileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="@string/nameLastname"
                        android:textColor="@color/author_title"
                        android:textSize="7pt" />

                    <TextView
                        android:id="@+id/profileLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="@string/cityAddress"
                        android:textColor="@color/author_title"
                        android:textSize="5pt" />

                    <TextView
                        android:id="@+id/profilePhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="@string/phoneNumber"
                        android:textColor="#336699"
                        android:textSize="7pt"
                        android:layout_marginTop="8dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp">
                        <ImageView
                            android:id="@+id/profileGplusButton"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/icon_gplus"
                            android:layout_marginLeft="4dp"/>
                        <ImageView
                            android:id="@+id/profileFbButton"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/icon_fb"
                            android:layout_marginLeft="4dp"/>
                        <ImageView
                            android:id="@+id/profileVkButton"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/icon_vk"
                            android:layout_marginLeft="4dp"/>
                        <ImageView
                            android:id="@+id/profileInstagramButton"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/icon_instagram"
                            android:layout_marginLeft="4dp"/>
                        <ImageView
                            android:id="@+id/profileOkButton"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/icon_ok"
                            android:layout_marginLeft="4dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D0D0D0"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:id="@+id/profileServices"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:orientation="vertical"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"/>
                </ScrollView>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/profileNavigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/menu_navigation" />

</android.support.v4.widget.DrawerLayout>