<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myProfileDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/myProfileToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/myProfileAvatar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:border_color="#FFFFFF"
                        app:border_width="0dp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/myProfileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="@string/nameLastname"
                        android:textColor="@color/author_title"
                        android:textSize="7pt" />

                    <TextView
                        android:id="@+id/myProfileLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="@string/cityAddress"
                        android:textColor="@color/author_title"
                        android:textSize="5pt" />

                    <TextView
                        android:id="@+id/myProfilePhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingLeft="16dp"
                        android:text="@string/phoneNumber"
                        android:textColor="#336699"
                        android:textSize="7pt" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/myProfileGplusButton"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="4dp"
                            android:src="@mipmap/icon_gplus" />

                        <ImageView
                            android:id="@+id/myProfileFbButton"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="4dp"
                            android:src="@mipmap/icon_fb" />

                        <ImageView
                            android:id="@+id/myProfileVkButton"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="4dp"
                            android:src="@mipmap/icon_vk" />

                        <ImageView
                            android:id="@+id/myProfileInstagramButton"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="4dp"
                            android:src="@mipmap/icon_instagram" />

                        <ImageView
                            android:id="@+id/myProfileOkButton"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="4dp"
                            android:src="@mipmap/icon_ok" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D0D0D0" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/myProfileServices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/myProfileAddToGallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_plus" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/myProfileNavigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/menu_navigation" />

</android.support.v4.widget.DrawerLayout>